fixed overflow issue with viewlogs component

--- a/DailyLog/src/Dashboard/Dashboard.module.css
+++ b/DailyLog/src/Dashboard/Dashboard.module.css
@@ -6,7 +6,7 @@
     padding-top: 2rem;
     color: rgba(245, 244, 251, 0.9);
     text-shadow: 0px 0px 10px white;
-    flex-basis: 45%;
+    flex-basis: 50%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
