--- a/DailyLog/src/Homepage/Homepage.module.css
+++ b/DailyLog/src/Homepage/Homepage.module.css
@@ -13,7 +13,7 @@
     border-right: none;
     border-bottom: none;
     border-left: none;
-    flex-basis: 45%;
+    flex-basis: 50%;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
