--- a/DailyLog/src/UIComponents/MainOverlay/MainOverlay.module.css
+++ b/DailyLog/src/UIComponents/MainOverlay/MainOverlay.module.css
@@ -18,6 +18,6 @@
 
 @keyframes overlay{
     to{
-        top: 10%;
+        top: 12%;
     }
 }
