--- a/DailyLog/src/ViewLogs/ViewLogs.module.css
+++ b/DailyLog/src/ViewLogs/ViewLogs.module.css
@@ -5,7 +5,6 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    overflow: hidden;
 }
 
 .view-logs-title, .view-logs-exit{
@@ -19,8 +18,7 @@
 }
 
 .container{
-    height: auto;
-    min-height: 100%;
+    height: 100%;
     width: 100%;
     display: flex;
     flex-direction: column;
